src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Contact.MailingStreet &amp; BR() &amp; Contact.MailingCity &amp; BR() &amp; Contact.MailingState &amp; BR() &amp; Contact.MailingCountry &amp; BR() &amp; Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Deregistering__c</fullName>
        <label>Reason for Deregistering</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Auto_Reminder_Email_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer Auto-Reminder Email opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_de_registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer de-registration</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_List</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All List</label>
    </listViews>
    <listViews>
        <fullName>Branch_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Branch Queue</label>
        <queue>Branch_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Incidents</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>ITS</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
</CustomObject>